Target Audience Updated

--- a/lesson3/styles/main.css
+++ b/lesson3/styles/main.css
@@ -122,9 +122,11 @@ nav a:hover {
   }
   .additional1 {
     background-color: #293022;
+    color: white;
   }
   .additional2{
     background-color: #188C69;
+    color: white;
   }
 
   .fontp {
