--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -12,6 +12,7 @@ main {
     display: flex;
     font-size: 16.5px;
     margin-top: 10px;
+    background-color: #188C69;
 }
 
 
@@ -25,7 +26,8 @@ h3{
 }
 
 .completeDate{
-    background-color:gray;
+    background-color: #004275;
+    color:rgb(255, 255, 255);
     align-items: center;
     flex-grow: 8;
     margin-bottom: 3%;
@@ -33,7 +35,6 @@ h3{
 
 
 header {
-    background-color: #293022;
 	display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -41,10 +42,12 @@ header {
 	justify-content: space-between;
 	max-width: 100%;	
 	border-bottom: 1px solid #bbb;
+
 }
 
 .head{
     width: 100%;
+    
 }
 
 .head-one{
@@ -94,7 +97,7 @@ footer {
     flex-direction: column;
     align-items: center;
     border-radius: 10px 10px;
-    box-shadow: 10px 10px 10px gray;
+    box-shadow: 10px 10px 10px #7AC2E1;;
     margin-top: 20px;
 }
 
@@ -118,13 +121,13 @@ footer {
 .parrafodos {
     text-align: center;
     margin: auto;
-    color: #FFFCFF;
+    color:#293022;
     margin: 0%;
 }
 
 header, footer {
-    background-color: #293022;
-    color: #FFFCFF;
+    background-color: #7AC2E1;
+    color: #293022;
     text-align: center;
 }
 
@@ -134,6 +137,10 @@ h2 {
 
 h1 {
     font-size: 1.2em;
+}
+
+#banner{
+    text-align: center;
 }
 
 
@@ -148,7 +155,7 @@ nav button{
 }
 
 nav{
-    background-color: rgb(28, 27, 27);
+    background-color: #004275;
 
 }
 
@@ -162,14 +169,15 @@ nav ul li a{
     display: block;
     padding: .8rem 2vw;
     text-decoration: none;
-    color: rgb(224, 224, 224);
+    color: white;
     border-top: 1px solid rgba(0,0,0,0.5);
     font-size: 0.8rem;
 }
 
 
 nav ul li a:hover{
-    background-color: rgba(0,0,0,0.3);
+    background-color: #d8d7e0;
+    color:black;
 }
 
 nav ul {display: none;}
@@ -183,6 +191,7 @@ nav ul.open {display: block;}
 
 .head.open{flex-direction: column;}
 .menu.open{max-width: 100%;}
+
 
 .content {
     display: flex;
@@ -200,7 +209,7 @@ nav ul.open {display: block;}
 }
 
 section  {
-  background-color: #bbb;
+  background-color: #EEEDED;
   border: #293022 3px solid;
   margin-top: 5px;
   width: 378px;
@@ -242,6 +251,61 @@ section  {
     display: flex;
     flex-direction: row;
 }
+
+.site-name{
+    position: relative;
+}
+
+.site-name picture,  .site-name picture img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 0;
+}
+
+.site-name-1{
+    position: absolute;
+    z-index: 1;
+    top: 10px;
+    left: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-shadow: black 0.1em 0.1em 0.5em;
+    color: black;
+}
+
+.site-name-2{
+    position: absolute;
+    z-index: 2;
+    text-decoration: none;
+    bottom: 50px;
+    right: 25px;
+    padding: 1rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.2rem;
+    width: 200px;
+    background-color: #007e8f;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #293022;
+    color: #293022;
+}
+
+.Release p{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+}
+
+
 
 
 
