--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -25,7 +25,42 @@
     display: flex;
     flex-grow: 8;
 
+    background-color: #eee;
+    margin: 5px;
+    align-content: center;
+    height: 200px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 2px 2px #06ac06b0;
+    text-align: center;
+    position: relative;
   }
+
+  .join p{
+    position: absolute;
+    text-align: center;
+    bottom: 40px; 
+    right: 20px;
+    left: 20px;
+}
+
+.join a{
+    text-decoration: none;
+    position: absolute;
+    width: 90%;
+    height: auto;
+    padding: 1rem;
+    background-color: #007e8f;
+    font-weight: bold;
+    border-radius: 10px;
+    color: #293022;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    top: 20px;
+    left: 15px; 
+    right: 10px;
+    z-index: 1;
+    font-size: 1.5rem;
+}
+
 
   .content{
     width: 100%;
@@ -44,7 +79,8 @@
 
   .weather{
     order: 3;
-    width: 42%;
+    width: 37%;
+    margin-left: 0%;
   }
 
   .Release{
