--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -150,7 +150,7 @@
       width: 70%;
       height: auto;
       padding: 1rem;
-      background-color: #007e8f;
+      background-color: #188C69;
       font-weight: bold;
       border-radius: 10px;
       color: #293022;
