--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -90,6 +90,86 @@ header {
 	height: auto;
 }
 
+/*******************FORM*****************************/
+
+.title-join{
+    color: white;
+    margin: 0 auto;
+}
+
+.principal{
+    margin: 0 auto;
+}
+
+.thankyou{
+    color: white;
+}
+
+form fieldset{
+    margin: 2rem 0;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: .5rem 2%;
+}
+
+form legend{
+    color: white;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+}
+
+form label.top, form div{
+    display: block;
+    padding-top: 1rem;
+    color: white;
+    font-size: .8rem;
+
+}
+
+form label.top input{
+    display: block;
+    font-size: 1rem;
+    border: solid 1px white;
+    border-radius: 4px;
+    padding: .75rem;
+    color: white;
+    width: 89%;
+    max-width: 20rem;
+    background-color: rgba(0,0,0,0.1);
+}
+
+form label.sbs{
+    display: block;
+    padding: .75rem 0;
+    color: white;
+}
+
+form label.top ::placeholder{
+    color: yellowgreen;
+}
+
+form input.submitBtn{
+    border: none;
+    background-color: #9c2c13;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    max-width: 20rem;
+}
+
+form label.top input:required{
+    border-left: red solid 6px;
+}
+
+form label.top input:required:valid{
+    border-left: yellow solid 6px;
+}
+
+h1{
+    text-align: center;
+}
 
 footer {
     font-family: 'Inter', sans-serif;
