--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -441,20 +441,76 @@ section  {
 /* 
 directory */
 
+.main-directory{
+    display: flex;
+    flex-direction: column;
+}
+
+.directory-menu{
+    display: flex;
+    justify-content: center;
+    margin-top: 1.2rem;
+    margin-bottom: 1.3rem;
+}
+
+
 .directory {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    overflow: hidden;
   }
   
-  section {
-    margin: 0.25rem;
-    padding: 0.35rem;
-    background-color: rgb(255, 255, 255);
-    border: 8px solid rgb(194, 165, 165);
-    display: flex;
+  .directory section {
     flex-direction: column;
+	text-align: center;
     align-items: center;
+    padding: 10px;
+    margin: 0.8rem;
+    box-shadow: 0 0 15px #71bbb3b0;
+    border: solid rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    background-color: #eee;
+    margin-left: 2px;
+    margin-right: 2px;
   }
+
+
+  .directory-title{
+    text-align: center;
+    color:  rgba(0, 0, 0, 0.8);
+    font-size: 2rem;
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);    
+  }
+
+  .list-directory{
+    display: flex;
+	flex-direction: column;
+    align-items: center;
+    text-align: center;
+    overflow: hidden;
+    margin: 1.2rem;
+  }
+
+  .list-directory section{
+    padding: 10px;
+    margin: 0.8rem;
+    box-shadow: 0 0 15px #06ac06b0;
+    background-color: #eee;
+    border: solid rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+  }
+
+
+
+
+
+  **********************
+
+
+
+
+
+
 
 
 
