--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -62,7 +62,7 @@ header {
 }
 
 .logo img {
-	width: 100px;
+	width: 10px;
 	height: auto;
 }
 
@@ -86,7 +86,7 @@ header {
 }
 
 .social svg {
-	width: 15px;
+	width: 25px;
 	height: auto;
 }
 
@@ -102,7 +102,13 @@ header {
 }
 
 .thankyou{
+    text-align: center;
     color: white;
+}
+
+.main-thanks{
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
 form fieldset{
