--- a/FinalProject/css/large.css
+++ b/FinalProject/css/large.css
@@ -257,3 +257,36 @@ footer p {
 footer a {
     color: rgb(255, 136, 0);
 }
+
+.laguna-beach{
+    display: block;
+    
+
+background-color: #eee;
+  margin: 5px;
+  align-content: center;
+  
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 2px 2px #aae1aa;
+  text-align: center;
+  position: relative;
+  }
+
+  .laguna-beach a{
+    margin: 0;
+    text-decoration: none;
+    position: absolute;
+    width: 30%;
+    height: auto;
+    padding: 1rem;
+    background-color: #e5c281;
+    font-weight: bold;
+    border-radius: 10px;
+    color: #293022;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    top: 150px;
+    left: 15px; 
+    right: 10px;
+    z-index: 1;
+    font-size: 1.2rem;
+  }
