--- a/FinalProject/css/large.css
+++ b/FinalProject/css/large.css
@@ -52,9 +52,10 @@ hr {
 }
 
 .social-media {
-    background: white;
-    border-radius: 15px;
+    background: black;
+    border-radius: 12px;
     padding: 2%;
+    margin: 0 auto;
 }
 
 a {
